# voice-ai-tutor

./: .gitignore  OFFLINE_MODE_CONFIG.md  PAGE_FILTERING_FIX.md  README.md  STICKY_SUBJECTS_FIX.md  SUBJECT_SWITCHING_INTERRUPTION_FIX.md  agent_voices.json  pyproject.toml  test_dependencies.py  test_vector_filters.py
assets/: Algebra-2-Book.ocr.txt
docs/: PROMPT_LOG.md  SESSION_CONTEXT.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
src/: chemistry_agent.py  conversation_utils.py  crash_logger.py  english_agent.py  history_agent.py  llamacpp_manager.py  local_providers.py  main.py  math_agent.py  note_taker_agent.py  persistence.py  rag_library.py  router_agent.py  settings_store.py  stt_module.py  tts_module.py  vector.py  voice_agent.py  voice_config.py  waveglow_tts.py  web_app.py  web_server.py
src/util/: pdf_ocr.py
tests/data/: test_input.txt
tests/integration/: test_barge_in_flow.py  test_comprehensive_filtering.py  test_end_to_end_fix.py  test_integration.py  test_page_filtering.py  test_sticky_subjects.py  test_subject_switch_fix.py
tests/smoke/: test_quick_verification.py
tests/unit/: test_filters_and_echo.py  test_main_unit.py  test_note_taker_agent.py  test_persistence.py  test_rag_library.py  test_settings_store.py  test_stt_provider_unit.py  test_tts_unit.py  test_vector_study_sets.py  test_voice_agent_integration.py  test_voice_agent_persistence_integration.py
