[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-ai-tutor"
version = "0.1.2"
description = "A study tutor that you can talk to"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=3.1",
    "faster-whisper",
    "pyttsx3",
    "kokoro",
    "soundfile",
    "langchain",
    "langchain-ollama",
    "langchain-core",
    "langchain-chroma",
    "langchain-community",
    "langchain-text-splitters",
    "pypdf",
    "pypdfium2",
    "pytesseract",
    "pillow",
    "sounddevice",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "EbookLib",
    "beautifulsoup4",
    "piper-tts>=1.4.2",
]

[project.optional-dependencies]
waveglow = [
    "torch>=2.4",
    "torchaudio>=2.4",
    "inflect>=7.3",
    "unidecode>=1.3",
    "librosa>=0.10",
]

[project.scripts]
voice-ai-tutor = "main:main"
voice-ai-tutor-web = "web_server:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "crash_logger",
    "persistence",
    "note_taker_agent",
    "main",
    "web_app",
    "web_server",
    "voice_agent",
    "local_providers",
    "llamacpp_manager",
    "settings_store",
    "rag_library",
    "router_agent",
    "history_agent",
    "chemistry_agent",
    "math_agent",
    "english_agent",
    "stt_module",
    "tts_module",
    "waveglow_tts",
    "voice_config",
    "vector",
    "conversation_utils",
]
